--- a/index.html
+++ b/index.html
@@ -23,25 +23,37 @@
       <nav class="menu">
         <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-header"
             lang="en">Studio</span></a>
-        <ul class="list">
-          <li class="nav-item">
-            <a class="nav-link current" href="./index.html">Студия</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://www.devstudio.com/portfolio">Контакты</a>
-          </li>
-        </ul>
-        <ul class="list header-contacts">
-          <li class="header-contacts-mail">
-            <a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
-          </li>
-          <li class="header-contacts-tel">
-            <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
+        <div class="nav-wrapper">
+          <ul class="nav-list list">
+            <li class="nav-item">
+              <a class="nav-link current link" href="./index.html">Студия</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link link" href="https://www.devstudio.com/portfolio">Контакты</a>
+            </li>
+          </ul>
+        </div>
+        <div class="contact-wrapper">
+          <ul class="header-contacts list">
+            <li class="header-contacts-mail">
+              <a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com
+                <svg class="header-envelope">
+                  <use href="./images/sprite.svg#icon-envelope"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="header-contacts-tel">
+              <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11
+                <svg class="header-tel">
+                  <use href="./images/sprite.svg#icon-smartphone"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </div>
   </header>
@@ -59,20 +71,32 @@
       <div class="container">
         <ul class="specs-list list">
           <li class="specs-list-item">
+            <svg class="specialties-logo">
+              <use href="./images/sprite.svg#icon-antena"></use>
+            </svg>
             <h3 class="specs-subtitle">Внимание к деталям</h3>
             <p class="specs-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li class="specs-list-item">
+            <svg class="specialties-logo">
+              <use href="./images/sprite.svg#icon-clock"></use>
+            </svg>
             <h3 class="specs-subtitle">Пунктуальность</h3>
             <p class="specs-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li class="specs-list-item">
+            <svg class="specialties-logo">
+              <use href="./images/sprite.svg#icon-diagram"></use>
+            </svg>
             <h3 class="specs-subtitle">Планирование</h3>
             <p class="specs-text">Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li class="specs-list-item">
+            <svg class="specialties-logo">
+              <use href="./images/sprite.svg#icon-astronaut"></use>
+            </svg>
             <h3 class="specs-subtitle">Современные технологии</h3>
             <p class="specs-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
@@ -82,7 +106,7 @@
     <!-- SKILLS -->
     <section class="skills">
       <div class="container">
-        <h2 class="skills-title">Чем мы занимаемся</h2>
+        <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="skills-list list">
           <li class="skills-list-item">
             <img class="img" src="./images/what_we_do/what_we_do_1.jpg" alt="software developer working" lang="en">
@@ -99,13 +123,43 @@
     <!-- TEAM -->
     <section class="team">
       <div class="container">
-        <h2 class="team-title">Наша команда</h2>
+        <h2 class="section-title">Наша команда</h2>
         <ul class="team-list list">
           <li class="team-list-item">
             <img class="team-img" src="./images/our_masters/master_1.jpg" alt="friendly men in glasses" lang="en">
             <div class="team-name-container">
               <h3 class="team-name">Игорь Демьяненко</h3>
               <p class="team-occupation" lang="en">Product Designer</p>
+              <ul class="social-list list">
+                <li class="social-list-item">
+                  <a href="" class="social-list-link link">
+                    <svg class="social-list-icon">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link link">
+                    <svg class="social-list-icon">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link link">
+                    <svg class="social-list-icon">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link link">
+                    <svg class="social-list-icon">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-list-item">
@@ -113,6 +167,36 @@
             <div class="team-name-container">
               <h3 class="team-name">Ольга Репина</h3>
               <p class="team-occupation" lang="en">Frontend Developer</p>
+              <ul class="social-list list">
+                <li class="social-list-item">
+                  <a href="" class="social-list-link link">
+                    <svg class="social-list-icon">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link link">
+                    <svg class="social-list-icon">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link link">
+                    <svg class="social-list-icon">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link link">
+                    <svg class="social-list-icon">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-list-item">
@@ -120,6 +204,36 @@
             <div class="team-name-container">
               <h3 class="team-name">Николай Тарасов</h3>
               <p class="team-occupation" lang="en">Marketing</p>
+              <ul class="social-list list">
+                <li class="social-list-item">
+                  <a href="" class="social-list-link link">
+                    <svg class="social-list-icon">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link link">
+                    <svg class="social-list-icon">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link link">
+                    <svg class="social-list-icon">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link link">
+                    <svg class="social-list-icon">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
           </li>
           <li class="team-list-item">
@@ -127,7 +241,87 @@
             <div class="team-name-container">
               <h3 class="team-name">Михаил Ермаков</h3>
               <p class="team-occupation" lang="en">UI Designer</p>
+              <ul class="social-list list">
+                <li class="social-list-item">
+                  <a href="" class="social-list-link link">
+                    <svg class="social-list-icon">
+                      <use href="./images/sprite.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link link">
+                    <svg class="social-list-icon">
+                      <use href="./images/sprite.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link link">
+                    <svg class="social-list-icon">
+                      <use href="./images/sprite.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list-item">
+                  <a href="" class="social-list-link link">
+                    <svg class="social-list-icon">
+                      <use href="./images/sprite.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!--CLIENTS-->
+    <section class="clients">
+      <div class="container">
+        <h2 class="section-title">Постоянные клиенты</h2>
+        <ul class="clients-list list">
+          <li class="clients-list-item">
+            <a href="" class="clients-logo link">
+              <svg class="clients-logo-icon" width="44" height="50">
+                <use href="./images/sprite.svg#icon-logo-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-list-item">
+            <a href="" class="clients-logo link">
+              <svg class="clients-logo-icon" width="40" height="52">
+                <use href="./images/sprite.svg#icon-logo-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-list-item">
+            <a href="" class="clients-logo link">
+              <svg class="clients-logo-icon" width="41" height="43">
+                <use href="./images/sprite.svg#icon-logo-3"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-list-item">
+            <a href="" class="clients-logo link">
+              <svg class="clients-logo-icon" width="80" height="42">
+                <use href="./images/sprite.svg#icon-logo-4"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-list-item">
+            <a href="" class="clients-logo link">
+              <svg class="clients-logo-icon" width="59" height="47">
+                <use href="./images/sprite.svg#icon-logo-5"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="clients-list-item">
+            <a href="" class="clients-logo link">
+              <svg class="clients-logo-icon" width="88" height="45">
+                <use href="./images/sprite.svg#icon-logo-6"></use>
+              </svg>
+            </a>
           </li>
         </ul>
       </div>
@@ -136,16 +330,52 @@
   <!-- FOOTER -->
   <footer class="footer">
     <div class="container">
-      <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-footer" lang="en">Studio</span></a>
-      <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-      <ul class="address-list list">
-        <li class="address-list-item">
-          <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li class="address-list-item">
-          <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
-        </li>
-      </ul>
+      <div class="address-wrapper">
+        <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-footer"
+            lang="en">Studio</span></a>
+        <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+        <ul class="address-list list">
+          <li class="address-list-item">
+            <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="address-list-item">
+            <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-social-list">
+        <h2 class="footer-social-title">присоединяйтесь</h2>
+        <ul class="social-list list">
+          <li class="social-list-item">
+            <a href="" class="social-list-link link">
+              <svg class="social-list-icon">
+                <use href="./images/sprite.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="" class="social-list-link link">
+              <svg class="social-list-icon">
+                <use href="./images/sprite.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="" class="social-list-link link">
+              <svg class="social-list-icon">
+                <use href="./images/sprite.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="" class="social-list-link link">
+              <svg class="social-list-icon">
+                <use href="./images/sprite.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
