--- a/portfolio.html
+++ b/portfolio.html
@@ -16,34 +16,48 @@
 </head>
 
 <body>
+  <!-- HEADER -->
   <header class="header">
     <div class="container">
       <nav class="menu">
         <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-header"
             lang="en">Studio</span></a>
-        <ul class="list">
-          <li class="nav-item">
-            <a class="nav-link" href="./index.html">Студия</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link current" href="./portfolio.html">Портфолио</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://www.devstudio.com/portfolio">Контакты</a>
-          </li>
-        </ul>
-        <ul class="list header-contacts">
-          <li class="header-contacts-mail">
-            <a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com</a>
-          </li>
-          <li class="header-contacts-tel">
-            <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
+        <div class="nav-wrapper">
+          <ul class="nav-list list">
+            <li class="nav-item">
+              <a class="nav-link link" href="./index.html">Студия</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link current link" href="./portfolio.html">Портфолио</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link link" href="https://www.devstudio.com/portfolio">Контакты</a>
+            </li>
+          </ul>
+        </div>
+        <div class="contact-wrapper">
+          <ul class="header-contacts list">
+            <li class="header-contacts-mail">
+              <a class="header-contact-link link" href="mailto:info@devstudio.com" lang="en">info@devstudio.com
+                <svg class="header-envelope">
+                  <use href="./images/sprite.svg#icon-envelope"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="header-contacts-tel">
+              <a class="header-contact-link link" href="tel:+380961111111">+38 096 111 11 11
+                <svg class="header-tel">
+                  <use href="./images/sprite.svg#icon-smartphone"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </nav>
     </div>
   </header>
   <main>
+    <!-- EXAMPLES -->
     <section class="examples">
       <div class="container">
         <h2 class="visually-hidden">Наши работы</h2>
@@ -150,18 +164,55 @@
       </div>
     </section>
   </main>
+  <!-- FOOTER -->
   <footer class="footer">
     <div class="container">
-      <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-footer" lang="en">Studio</span></a>
-      <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
-      <ul class="address-list list">
-        <li class="address-list-item">
-          <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li class="address-list-item">
-          <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
-        </li>
-      </ul>
+      <div class="address-wrapper">
+        <a class="logo link" href="./index.html" lang="en">Web<span class="logo-studio-footer"
+            lang="en">Studio</span></a>
+        <p class="address">г. Киев, пр-т Леси Украинки, 26</p>
+        <ul class="address-list list">
+          <li class="address-list-item">
+            <a class="address-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="address-list-item">
+            <a class="address-link link" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-social-list">
+        <h2 class="footer-social-title">присоединяйтесь</h2>
+        <ul class="social-list list">
+          <li class="social-list-item">
+            <a href="" class="social-list-link link">
+              <svg class="social-list-icon">
+                <use href="./images/sprite.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="" class="social-list-link link">
+              <svg class="social-list-icon">
+                <use href="./images/sprite.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="" class="social-list-link link">
+              <svg class="social-list-icon">
+                <use href="./images/sprite.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a href="" class="social-list-link link">
+              <svg class="social-list-icon">
+                <use href="./images/sprite.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
     </div>
   </footer>
 </body>
