--- a/index.html
+++ b/index.html
@@ -71,32 +71,40 @@
       <div class="container">
         <ul class="specs-list list">
           <li class="specs-list-item">
-            <svg class="specialties-logo">
-              <use href="./images/sprite.svg#icon-antena"></use>
-            </svg>
+            <div class="logo-wrapper">
+              <svg class="specialties-logo">
+                <use href="./images/sprite.svg#icon-antena"></use>
+              </svg>
+            </div>
             <h3 class="specs-subtitle">Внимание к деталям</h3>
             <p class="specs-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li class="specs-list-item">
-            <svg class="specialties-logo">
-              <use href="./images/sprite.svg#icon-clock"></use>
-            </svg>
+            <div class="logo-wrapper">
+              <svg class="specialties-logo">
+                <use href="./images/sprite.svg#icon-clock"></use>
+              </svg>
+            </div>
             <h3 class="specs-subtitle">Пунктуальность</h3>
             <p class="specs-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li class="specs-list-item">
-            <svg class="specialties-logo">
-              <use href="./images/sprite.svg#icon-diagram"></use>
-            </svg>
+            <div class="logo-wrapper">
+              <svg class="specialties-logo">
+                <use href="./images/sprite.svg#icon-diagram"></use>
+              </svg>
+            </div>
             <h3 class="specs-subtitle">Планирование</h3>
             <p class="specs-text">Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li class="specs-list-item">
-            <svg class="specialties-logo">
-              <use href="./images/sprite.svg#icon-astronaut"></use>
-            </svg>
+            <div class="logo-wrapper">
+              <svg class="specialties-logo">
+                <use href="./images/sprite.svg#icon-astronaut"></use>
+              </svg>
+            </div>
             <h3 class="specs-subtitle">Современные технологии</h3>
             <p class="specs-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
