--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.css"
     integrity="sha512-Zx6MlUMKSVJoQ+83OwhdILe8cSEsCzfqThJd7J/VA2UrK6Ctj85p+xzqfyuNXE5B1k25uUdmJ2OzItbBy9GHAQ=="
     crossorigin="anonymous" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
@@ -81,7 +82,12 @@
         <ul class="examples-img-list list">
           <li class="examples-img-item">
             <a class="list-items link" href="">
-              <img class="img" src="./images/portfolio/portfolio-1.jpg" alt="laptop desctop">
+              <div class="examples-list-wraper">
+                <img class="img" src="./images/portfolio/portfolio-1.jpg" alt="laptop desctop">
+                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                   для цифрового
+                   шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="examples-about-wrapper">
                 <h3 class="examples-img-title">Технокряк</h3>
                 <p class="examples-img-about">Веб-сайт</p>
