--- a/portfolio.html
+++ b/portfolio.html
@@ -84,9 +84,10 @@
             <a class="list-items link" href="">
               <div class="examples-list-wraper">
                 <img class="img" src="./images/portfolio/portfolio-1.jpg" alt="laptop desctop">
-                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
-                   для цифрового
-                   шпионажа и атак на защищённые сервера конкурентов.</p>
+                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют
+                  эту платформу
+                  для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
               </div>
               <div class="examples-about-wrapper">
                 <h3 class="examples-img-title">Технокряк</h3>
@@ -96,7 +97,13 @@
           </li>
           <li class="examples-img-item">
             <a class="list-items link" href="">
-              <img class="img" src="./images/portfolio/portfolio-2.jpg" alt="two basketball players">
+              <div class="examples-list-wraper">
+                <img class="img" src="./images/portfolio/portfolio-2.jpg" alt="two basketball players">
+                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют
+                  эту платформу
+                  для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="examples-about-wrapper">
                 <h3 class="examples-img-title">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                 <p class="examples-img-about">Дизайн</p>
@@ -105,7 +112,13 @@
           </li>
           <li class="examples-img-item">
             <a class="list-items link" href="">
-              <img class="img" src="./images/portfolio/portfolio-3.jpg" alt="fish restaurant logo">
+              <div class="examples-list-wraper">
+                <img class="img" src="./images/portfolio/portfolio-3.jpg" alt="fish restaurant logo">
+                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют
+                  эту платформу
+                  для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="examples-about-wrapper">
                 <h3 class="examples-img-title">Ресторан <span lang="en">Seafood</span></h3>
                 <p class="examples-img-about">Приложение</p>
@@ -114,7 +127,13 @@
           </li>
           <li class="examples-img-item">
             <a class="list-items link" href="">
-              <img class="img" src="./images/portfolio/portfolio-4.jpg" alt="headphones">
+              <div class="examples-list-wraper">
+                <img class="img" src="./images/portfolio/portfolio-4.jpg" alt="headphones">
+                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют
+                  эту платформу
+                  для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="examples-about-wrapper">
                 <h3 class="examples-img-title">Проект <span lang="en">Prime</span></h3>
                 <p class="examples-img-about">Маркетинг</p>
@@ -123,7 +142,13 @@
           </li>
           <li class="examples-img-item">
             <a class="list-items link" href="">
-              <img class="img" src="./images/portfolio/portfolio-5.jpg" alt="two boxes">
+              <div class="examples-list-wraper">
+                <img class="img" src="./images/portfolio/portfolio-5.jpg" alt="two boxes">
+                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют
+                  эту платформу
+                  для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="examples-about-wrapper">
                 <h3 class="examples-img-title">Проект <span lang="en">Boxes</span></h3>
                 <p class="examples-img-about">Приложение</p>
@@ -132,7 +157,13 @@
           </li>
           <li class="examples-img-item">
             <a class="list-items link" href="">
-              <img class="img" src="./images/portfolio/portfolio-6.jpg" alt="computer display">
+              <div class="examples-list-wraper">
+                <img class="img" src="./images/portfolio/portfolio-6.jpg" alt="computer display">
+                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют
+                  эту платформу
+                  для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="examples-about-wrapper">
                 <h3 class="examples-img-title" lang="en">Inspiration has no Borders</h3>
                 <p class="examples-img-about">Веб-сайт</p>
@@ -141,7 +172,13 @@
           </li>
           <li class="examples-img-item">
             <a class="list-items link" href="">
-              <img class="img" src="./images/portfolio/portfolio-7.jpg" alt="opened magazine">
+              <div class="examples-list-wraper">
+                <img class="img" src="./images/portfolio/portfolio-7.jpg" alt="opened magazine">
+                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют
+                  эту платформу
+                  для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="examples-about-wrapper">
                 <h3 class="examples-img-title">Издание <span lang="en">Limited Edition</span></h3>
                 <p class="examples-img-about">Дизайн</p>
@@ -150,7 +187,13 @@
           </li>
           <li class="examples-img-item">
             <a class="list-items link" href="">
-              <img class="img" src="./images/portfolio/portfolio-8.jpg" alt="some label">
+              <div class="examples-list-wraper">
+                <img class="img" src="./images/portfolio/portfolio-8.jpg" alt="some label">
+                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют
+                  эту платформу
+                  для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="examples-about-wrapper">
                 <h3 class="examples-img-title">Проект <span lang="en">LAB</span></h3>
                 <p class="examples-img-about">Маркетинг</p>
@@ -159,7 +202,13 @@
           </li>
           <li class="examples-img-item">
             <a class="list-items link" href="">
-              <img class="img" src="./images/portfolio/portfolio-9.jpg" alt="man working on a laptop">
+              <div class="examples-list-wraper">
+                <img class="img" src="./images/portfolio/portfolio-9.jpg" alt="man working on a laptop">
+                <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют
+                  эту платформу
+                  для цифрового
+                  шпионажа и атак на защищённые сервера конкурентов.</p>
+              </div>
               <div class="examples-about-wrapper">
                 <h3 class="examples-img-title" lang="en">Growing Business</h3>
                 <p class="examples-img-about">Приложение</p>
